...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnLeaveWaitingList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/historyCancelledText"
                    android:text="@string/entrant_event_leave_waitlist"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnJoinWaitingList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/primaryAccent"
                    android:text="@string/entrant_event_join_waitlist"
...
